<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ngh-Aw-k6L">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
        <capability name="Image references" minToolsVersion="12.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Workouts-->
        <scene sceneID="2Ib-ur-4G5">
            <objects>
                <tableViewController title="Workouts" id="rXS-O8-RYf" customClass="WSTableViewController" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="lno-dm-xxr">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <view key="tableFooterView" contentMode="scaleToFill" id="r2a-gT-Zwv" userLabel="Table Footer View">
                            <rect key="frame" x="0.0" y="128.5" width="414" height="0.0"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        </view>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="WorkoutCell" id="C5V-ZC-N7N" customClass="WSWorkoutViewCell">
                                <rect key="frame" x="0.0" y="28" width="414" height="72.5"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="C5V-ZC-N7N" id="wwA-ol-ldJ">
                                    <rect key="frame" x="0.0" y="0.0" width="383" height="72.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Relative Date" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x0K-ee-jD3">
                                            <rect key="frame" x="20" y="11" width="115" height="24"/>
                                            <accessibility key="accessibilityConfiguration" label="Date"/>
                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="bottomLeft" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Time" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DEa-Fk-Pie">
                                            <rect key="frame" x="20" y="43" width="34" height="18"/>
                                            <accessibility key="accessibilityConfiguration" label="Start Time"/>
                                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                            <color key="textColor" systemColor="secondaryLabelColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="topRight" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration" textAlignment="right" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xj6-0y-07H">
                                            <rect key="frame" x="302.5" y="11" width="68.5" height="20.5"/>
                                            <accessibility key="accessibilityConfiguration" label="Duration"/>
                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="bottomRight" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Distance" textAlignment="right" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R1v-Ww-KHj">
                                            <rect key="frame" x="307.5" y="39.5" width="63.5" height="19.5"/>
                                            <accessibility key="accessibilityConfiguration" label="Distance"/>
                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                            <color key="textColor" systemColor="secondaryLabelColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                    </subviews>
                                    <constraints>
                                        <constraint firstItem="xj6-0y-07H" firstAttribute="top" secondItem="wwA-ol-ldJ" secondAttribute="topMargin" id="0PJ-oT-t97"/>
                                        <constraint firstItem="x0K-ee-jD3" firstAttribute="top" secondItem="wwA-ol-ldJ" secondAttribute="topMargin" id="6XX-32-LMe"/>
                                        <constraint firstItem="x0K-ee-jD3" firstAttribute="leading" secondItem="wwA-ol-ldJ" secondAttribute="leadingMargin" id="85f-vL-JXM"/>
                                        <constraint firstAttribute="trailingMargin" secondItem="R1v-Ww-KHj" secondAttribute="trailing" constant="4" id="BBM-E5-6Kq"/>
                                        <constraint firstItem="R1v-Ww-KHj" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DEa-Fk-Pie" secondAttribute="trailing" id="GKp-Vn-Jpt"/>
                                        <constraint firstItem="DEa-Fk-Pie" firstAttribute="top" secondItem="x0K-ee-jD3" secondAttribute="bottom" constant="8" id="QWL-VG-nnN"/>
                                        <constraint firstItem="xj6-0y-07H" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="x0K-ee-jD3" secondAttribute="trailing" id="QrZ-IB-QPC"/>
                                        <constraint firstAttribute="trailingMargin" secondItem="xj6-0y-07H" secondAttribute="trailing" constant="4" id="ZaK-6S-W4S"/>
                                        <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="DEa-Fk-Pie" secondAttribute="bottom" id="l21-PA-YNV"/>
                                        <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="R1v-Ww-KHj" secondAttribute="bottom" id="oEd-3D-ngY"/>
                                        <constraint firstItem="DEa-Fk-Pie" firstAttribute="leading" secondItem="wwA-ol-ldJ" secondAttribute="leadingMargin" id="qDd-jF-KOj"/>
                                        <constraint firstItem="R1v-Ww-KHj" firstAttribute="top" secondItem="xj6-0y-07H" secondAttribute="bottom" constant="8" id="xwf-Ad-dyk"/>
                                    </constraints>
                                </tableViewCellContentView>
                                <connections>
                                    <outlet property="dateLabel" destination="x0K-ee-jD3" id="RYo-vK-9x3"/>
                                    <outlet property="distanceLabel" destination="R1v-Ww-KHj" id="9Bj-Fm-VIL"/>
                                    <outlet property="durationLabel" destination="xj6-0y-07H" id="hsX-fG-ZIF"/>
                                    <outlet property="timeLabel" destination="DEa-Fk-Pie" id="Fl5-xd-Odr"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="rXS-O8-RYf" id="Y3a-QW-vMX"/>
                            <outlet property="delegate" destination="rXS-O8-RYf" id="AcU-D5-SfF"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Workouts" id="Mig-xd-Bbd">
                        <barButtonItem key="leftBarButtonItem" title="Preferences" id="O6X-po-USA">
                            <imageReference key="image" image="gear" catalog="system" symbolScale="default"/>
                            <connections>
                                <segue destination="c2w-lW-VP6" kind="show" id="ysI-Wm-LwK"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="1up-g3-cPj">
                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <connections>
                            <action selector="refreshHealthData:" destination="rXS-O8-RYf" eventType="valueChanged" id="9on-ql-1MB"/>
                        </connections>
                    </refreshControl>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="sDs-O7-1zq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="432" y="149"/>
        </scene>
        <!--Preferences-->
        <scene sceneID="z2G-hw-9Og">
            <objects>
                <viewControllerPlaceholder storyboardName="Preferences" id="c2w-lW-VP6" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="fTT-T4-dsN"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Tnc-37-ngZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1130" y="149"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="sCK-u6-5uR">
            <objects>
                <navigationController id="ngh-Aw-k6L" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YXz-Jo-APd">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <textAttributes key="titleTextAttributes">
                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                        </textAttributes>
                    </navigationBar>
                    <connections>
                        <segue destination="rXS-O8-RYf" kind="relationship" relationship="rootViewController" id="h3R-fG-hXm"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="w53-H6-cqU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-487" y="149"/>
        </scene>
    </scenes>
    <resources>
        <image name="gear" catalog="system" width="128" height="119"/>
        <systemColor name="secondaryLabelColor">
            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
