...
}

- (void)setGraphScrollViewProxy:(UIScrollView *)graphScrollViewProxy {
    _graphScrollViewProxy = graphScrollViewProxy;
    
    graphScrollViewProxy.isAccessibilityElement = YES;
    graphScrollViewProxy.accessibilityLabel = @"Graph";
    graphScrollViewProxy.accessibilityHint = @"Adjust selection";
    graphScrollViewProxy.accessibilityTraits = UIAccessibilityTraitAllowsDirectInteraction;
    
    graphScrollViewProxy.panGestureRecognizer.minimumNumberOfTouches = 2;
}

...
